# android-boilerplate

./: .gitignore  .travis.yml  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/io/github/mikovali/boilerplate/android/: ActivityTest.java
src/debug/: AndroidManifest.xml
src/debug/java/io/github/mikovali/boilerplate/android/: DebugApplication.java
src/main/: AndroidManifest.xml
src/main/cpp/: testing-lib.cpp
src/main/java/io/github/mikovali/boilerplate/android/: Activity.java  Application.java  TestingLibBridge.java  User.java
src/main/jni/: testing-lib-bridge.cpp
src/main/res/values/: donottranslate.xml
src/test/java/io/github/mikovali/boilerplate/android/: UserTest.java
